--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jiaminghi/data-view": "^2.10.0",
     "axios": "^1.6.7",
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.8.3",
-    "echarts": "^3.3.2",
+    "echarts": "^3.8.5",
     "element-ui": "^2.15.14",
     "font-awesome": "^4.7.0",
+    "highcharts": "^11.3.0",
+    "less-loader": "^12.2.0",
+    "moment": "^2.30.1",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
